# wanyard

./: .gitignore  Dockerfile  README.md  SETUP_NOTES.md  config.banana.yaml  config.compose.yaml  config.example.yaml  config.yaml  docker-compose.banana.yml  docker-compose.yml  go2rtc.yaml  healthcheck.sh  pyproject.toml
apk/: README.md
emulator/: Dockerfile  start.sh
scripts/: install_eufy_apk.sh  probe_eufy_client.js
site/: README.md  index.html  site.webmanifest  style.css  wrangler.jsonc
src/eufy_snapshot/: adb.py  capture.py  cli.py  config.py  db.py  detect.py  doctor.py  index.py  runner.py  video.py  web.py  yolo_server.py  yolo_worker.py
src/eufy_snapshot/static/: app.css  app.js  index.html  manifest.json  settings.css  settings.html  settings.js  video.css  video.html  video.js  video2.css  video2.html  video2.js
src/wanyard/: capture.py  cli.py  config.py  runner.py  video.py  web.py  yolo_server.py
src/wanyard/static/: manifest.json  settings.css  settings.html  video2.css  video2.html  video2.js
test-env/: config.yaml
test-env/video/: video.db-shm  video.db-wal
