[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wanyard"
version = "0.1.0"
description = "RTSP/HLS camera capture with YOLO detection and a LAN web viewer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.40",
    "hypercorn[asyncio]>=0.16",
    "uvloop>=0.19; sys_platform != 'win32'",
    "ultralytics>=8.3",
]

[project.scripts]
wanyard = "wanyard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wanyard = ["static/*"]
